fixed blank animation flickering

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,22 @@ body {
   align-items: center;
   flex-direction: column;
 
-  --img-flickering-time: 0.2s;
+  --img-flickering-state: 0;
+  animation-name: flickering;
+  animation-duration: 0.2s;
+  animation-timing-function: step-end;
+  animation-iteration-count: infinite;
+}
+
+@keyframes flickering {
+  from,
+  to {
+    --img-flickering-state: 0;
+  }
+
+  50% {
+    --img-flickering-state: 1;
+  }
 }
 
 .spacer {
@@ -143,13 +158,14 @@ body {
   position: relative;
   top: 0;
   left: 0;
+  opacity: var(--img-flickering-state);
 }
 
 .star-img2 {
   position: absolute;
   top: 0;
   left: 0;
-  animation-delay: calc(var(--img-flickering-time) / 2);
+  opacity: calc(1 - var(--img-flickering-state));
 }
 
 .star-img1,
@@ -157,10 +173,6 @@ body {
   filter: invert(1) opacity(0.9) drop-shadow(0 0 0.5rem white);
   max-width: 10vw;
   max-height: 8vh;
-  animation-name: flickering;
-  animation-duration: var(--img-flickering-time);
-  animation-timing-function: step-end;
-  animation-iteration-count: infinite;
 }
 
 /* ROTATING ME */
@@ -188,13 +200,14 @@ body {
   position: relative;
   top: 0;
   left: 0;
+  opacity: var(--img-flickering-state);
 }
 
 .me-img2 {
   position: absolute;
   top: 0;
   left: 0;
-  animation-delay: calc(var(--img-flickering-time) / 2);
+  opacity: calc(1 - var(--img-flickering-state));
 }
 
 .me-img1,
@@ -203,22 +216,4 @@ body {
     drop-shadow(0 0 0.5rem black);
   max-width: 40vw;
   max-height: 30vh;
-  animation-name: flickering;
-  animation-duration: var(--img-flickering-time);
-  animation-timing-function: step-end;
-  animation-iteration-count: infinite;
-}
-
-@keyframes flickering {
-  from {
-    opacity: 0;
-  }
-
-  50% {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 1;
-  }
 }
